crates/pina_macros/src/snapshots/pina_macros__tests__instruction_with_custom_variant.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[derive(::pina::zeropod::ZeroPod)]
pub struct TransferData {
    discriminator: [u8; OpCode::BYTES],
    pub amount: PodU64,
    pub destination: [u8; 32],
}
const _: fn(PodU64) -> ::pina::PodU64 = |value| value;
const _: fn() = || {
    fn assert_mapping<T: ::pina::ZcField<Pod = ::pina::PodU64>>() {}
    fn assert_storage<T: ::pina::ZcElem>() {}
    assert_mapping::<PodU64>();
    assert_storage::<::pina::PodU64>();
};
const _: () = {
    ::core::assert!(::core::mem::align_of:: < ::pina::PodU64 > () == 1);
    ::core::assert!(
        ::core::mem::size_of:: < ::pina::PodU64 > () == < PodU64 as ::pina::ZcField >
        ::POD_SIZE,
    );
};
const _: fn([u8; 32]) -> [::core::primitive::u8; 32] = |value| value;
const _: fn() = || {
    fn assert_mapping<T: ::pina::ZcField<Pod = [::core::primitive::u8; 32]>>() {}
    fn assert_storage<T: ::pina::ZcElem>() {}
    assert_mapping::<[u8; 32]>();
    assert_storage::<[::core::primitive::u8; 32]>();
};
const _: () = {
    ::core::assert!(::core::mem::align_of:: < [::core::primitive::u8; 32] > () == 1);
    ::core::assert!(
        ::core::mem::size_of:: < [::core::primitive::u8; 32] > () == < [u8; 32] as
        ::pina::ZcField > ::POD_SIZE,
    );
};
const _: fn() = || {
    fn assert_storage<T: ::pina::ZcElem>() {}
    assert_storage::<TransferDataZc>();
};
const _: () = {
    ::core::assert!(::core::mem::align_of:: < TransferDataZc > () == 1);
    ::core::assert!(
        ::core::mem::size_of:: < TransferDataZc > () == OpCode::BYTES +
        ::core::mem::size_of:: < ::pina::PodU64 > () + ::core::mem::size_of:: <
        [::core::primitive::u8; 32] > ()
    );
};
impl TransferData {
    /// The exact number of bytes required by the zeropod representation.
    pub const SIZE: usize = <Self as ::pina::ZeroPodFixed>::SIZE;
    /// Validate `data` and return zeropod's immutable zero-copy companion.
    pub fn try_from_bytes(
        data: &[u8],
    ) -> Result<&<Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE
            || !<Self as ::pina::HasDiscriminator>::matches_discriminator(data)
        {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    /// Initialize caller-owned storage and return its mutable zero-copy view.
    ///
    /// The complete slice is initialized before zeropod validates it. The
    /// returned borrow prevents the caller from observing or changing the raw
    /// bytes while the typed view is live.
    ///
    /// Every accepted field has an audited all-zero representation. The macro
    /// rejects custom types and other layouts whose zero state cannot be
    /// established by Pina's closed schema grammar.
    ///
    /// # Errors
    ///
    /// Returns the generated invalid-data error when `data` has the wrong
    /// length or zeroed storage is not a valid zeropod representation.
    pub fn initialize(
        data: &mut [u8],
    ) -> Result<&mut <Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        data.fill(0);
        <Self as ::pina::HasDiscriminator>::write_discriminator(data);
        <Self as ::pina::ZeroPodFixed>::from_bytes_mut(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
}
impl ::pina::HasDiscriminator for TransferData {
    type Type = OpCode;
    const VALUE: Self::Type = OpCode::DoTransfer;
}
