crates/pina_macros/src/snapshots/pina_macros__tests__pda_basic_address_seed_with_bump.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
pub struct CounterState {
    pub authority: Address,
    pub bump: u8,
}
///The PDA seeds for `CounterState`.
#[derive(Clone, Copy)]
pub struct CounterStateSeeds<'a> {
    ///The `authority` seed.
    pub authority: &'a Address,
}
///The PDA seeds for `CounterState`, including the bump seed.
pub struct CounterStateSeedsWithBump<'a> {
    inner: CounterStateSeeds<'a>,
    _bump: [u8; 1],
}
impl CounterState {
    /// Build the PDA seeds for this account.
    pub fn seeds<'a>(authority: &'a Address) -> CounterStateSeeds<'a> {
        CounterStateSeeds {
            authority: authority,
        }
    }
    /// Find the canonical PDA for this account and its bump seed.
    pub fn try_find_pda(
        authority: &Address,
        program_id: &Address,
    ) -> ::core::option::Option<(::pina::Address, u8)> {
        let seeds = Self::seeds(authority);
        ::pina::try_find_program_address(&seeds.as_slices(), program_id)
    }
    /// Find the canonical PDA for this account and its bump seed.
    ///
    /// # Panics
    ///
    /// Panics if no valid PDA exists for the given seeds.
    pub fn find_pda(authority: &Address, program_id: &Address) -> (::pina::Address, u8) {
        Self::try_find_pda(authority, program_id)
            .unwrap_or_else(|| panic!("could not find program address from seeds"))
    }
    ///Assert that `account` is the PDA for the given seeds, using the stored `bump` field.
    pub fn assert_seeds(
        account: &::pina::AccountView,
        authority: &Address,
        program_id: &::pina::Address,
    ) -> ::core::result::Result<(), ::pina::ProgramError> {
        let bump = ::pina::AsAccount::as_account::<Self>(account, program_id)?.bump;
        let seeds = Self::seeds(authority).with_bump(bump);
        <&::pina::AccountView as ::pina::AccountInfoValidation>::assert_seeds_with_bump(
                account,
                &seeds.as_slices(),
                program_id,
            )
            .map(|_| ())
    }
}
impl<'a> CounterStateSeeds<'a> {
    /// The seeds as byte slices, without the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 2usize] {
        [b"counter", self.authority.as_ref()]
    }
    /// Append the bump seed to the seeds.
    pub fn with_bump(&self, bump: u8) -> CounterStateSeedsWithBump<'a> {
        CounterStateSeedsWithBump {
            inner: *self,
            _bump: [bump],
        }
    }
}
impl<'a> CounterStateSeedsWithBump<'a> {
    /// The seeds as byte slices, including the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 3usize] {
        [b"counter", self.inner.authority.as_ref(), &self._bump]
    }
    /// The seeds as Pinocchio CPI seed values, including the bump seed.
    pub fn as_seed_array(&self) -> [::pina::Seed<'_>; 3usize] {
        self.as_slices().map(::pina::Seed::from)
    }
    /// The seeds as an owned PDA signer helper.
    pub fn to_signer(&self) -> ::pina::PdaSigner<'_, 3usize> {
        ::pina::PdaSigner::from_seed_array(self.as_seed_array())
    }
}
