crates/pina_macros/src/snapshots/pina_macros__tests__pda_constant_only_seed.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
pub struct AuthorityState {}
///The PDA seeds for `AuthorityState`.
#[derive(Clone, Copy)]
pub struct AuthorityStateSeeds<'a> {
    _marker: ::core::marker::PhantomData<&'a ()>,
}
///The PDA seeds for `AuthorityState`, including the bump seed.
pub struct AuthorityStateSeedsWithBump<'a> {
    inner: AuthorityStateSeeds<'a>,
    _bump: [u8; 1],
}
impl AuthorityState {
    /// Build the PDA seeds for this account.
    pub fn seeds<'a>() -> AuthorityStateSeeds<'a> {
        AuthorityStateSeeds {
            _marker: ::core::marker::PhantomData,
        }
    }
    /// Find the canonical PDA for this account and its bump seed.
    pub fn try_find_pda(
        program_id: &Address,
    ) -> ::core::option::Option<(::pina::Address, u8)> {
        let seeds = Self::seeds();
        ::pina::try_find_program_address(&seeds.as_slices(), program_id)
    }
    /// Find the canonical PDA for this account and its bump seed.
    ///
    /// # Panics
    ///
    /// Panics if no valid PDA exists for the given seeds.
    pub fn find_pda(program_id: &Address) -> (::pina::Address, u8) {
        Self::try_find_pda(program_id)
            .unwrap_or_else(|| panic!("could not find program address from seeds"))
    }
}
impl<'a> AuthorityStateSeeds<'a> {
    /// The seeds as byte slices, without the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 1usize] {
        [b"authority"]
    }
    /// Append the bump seed to the seeds.
    pub fn with_bump(&self, bump: u8) -> AuthorityStateSeedsWithBump<'a> {
        AuthorityStateSeedsWithBump {
            inner: *self,
            _bump: [bump],
        }
    }
}
impl<'a> AuthorityStateSeedsWithBump<'a> {
    /// The seeds as byte slices, including the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 2usize] {
        [b"authority", &self._bump]
    }
    /// The seeds as Pinocchio CPI seed values, including the bump seed.
    pub fn as_seed_array(&self) -> [::pina::Seed<'_>; 2usize] {
        self.as_slices().map(::pina::Seed::from)
    }
    /// The seeds as an owned PDA signer helper.
    pub fn to_signer(&self) -> ::pina::PdaSigner<'_, 2usize> {
        ::pina::PdaSigner::from_seed_array(self.as_seed_array())
    }
}
