crates/pina_macros/src/snapshots/pina_macros__tests__pda_default_crate_path.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
pub struct TodoState {
    pub owner: Address,
    pub bump: u8,
}
///The PDA seeds for `TodoState`.
#[derive(Clone, Copy)]
pub struct TodoStateSeeds<'a> {
    ///The `owner` seed.
    pub owner: &'a Address,
}
///The PDA seeds for `TodoState`, including the bump seed.
pub struct TodoStateSeedsWithBump<'a> {
    inner: TodoStateSeeds<'a>,
    _bump: [u8; 1],
}
impl TodoState {
    /// Build the PDA seeds for this account.
    pub fn seeds<'a>(owner: &'a Address) -> TodoStateSeeds<'a> {
        TodoStateSeeds { owner: owner }
    }
    /// Find the canonical PDA for this account and its bump seed.
    pub fn try_find_pda(
        owner: &Address,
        program_id: &Address,
    ) -> ::core::option::Option<(::pina::Address, u8)> {
        let seeds = Self::seeds(owner);
        ::pina::try_find_program_address(&seeds.as_slices(), program_id)
    }
    /// Find the canonical PDA for this account and its bump seed.
    ///
    /// # Panics
    ///
    /// Panics if no valid PDA exists for the given seeds.
    pub fn find_pda(owner: &Address, program_id: &Address) -> (::pina::Address, u8) {
        Self::try_find_pda(owner, program_id)
            .unwrap_or_else(|| panic!("could not find program address from seeds"))
    }
    ///Assert that `account` is the PDA for the given seeds, using the stored `bump` field.
    pub fn assert_seeds(
        account: &::pina::AccountView,
        owner: &Address,
        program_id: &::pina::Address,
    ) -> ::core::result::Result<(), ::pina::ProgramError> {
        let bump = ::pina::AsAccount::as_account::<Self>(account, program_id)?.bump;
        let seeds = Self::seeds(owner).with_bump(bump);
        <&::pina::AccountView as ::pina::AccountInfoValidation>::assert_seeds_with_bump(
                account,
                &seeds.as_slices(),
                program_id,
            )
            .map(|_| ())
    }
}
impl<'a> TodoStateSeeds<'a> {
    /// The seeds as byte slices, without the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 2usize] {
        [b"todo", self.owner.as_ref()]
    }
    /// Append the bump seed to the seeds.
    pub fn with_bump(&self, bump: u8) -> TodoStateSeedsWithBump<'a> {
        TodoStateSeedsWithBump {
            inner: *self,
            _bump: [bump],
        }
    }
}
impl<'a> TodoStateSeedsWithBump<'a> {
    /// The seeds as byte slices, including the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 3usize] {
        [b"todo", self.inner.owner.as_ref(), &self._bump]
    }
}
