crates/pina_macros/src/snapshots/pina_macros__tests__pda_without_bump_field.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
pub struct VaultState {
    pub user: Address,
}
///The PDA seeds for `VaultState`.
#[derive(Clone, Copy)]
pub struct VaultStateSeeds<'a> {
    ///The `user` seed.
    pub user: &'a Address,
}
///The PDA seeds for `VaultState`, including the bump seed.
pub struct VaultStateSeedsWithBump<'a> {
    inner: VaultStateSeeds<'a>,
    _bump: [u8; 1],
}
impl VaultState {
    /// Build the PDA seeds for this account.
    pub fn seeds<'a>(user: &'a Address) -> VaultStateSeeds<'a> {
        VaultStateSeeds { user: user }
    }
    /// Find the canonical PDA for this account and its bump seed.
    pub fn try_find_pda(
        user: &Address,
        program_id: &Address,
    ) -> ::core::option::Option<(::pina::Address, u8)> {
        let seeds = Self::seeds(user);
        ::pina::try_find_program_address(&seeds.as_slices(), program_id)
    }
    /// Find the canonical PDA for this account and its bump seed.
    ///
    /// # Panics
    ///
    /// Panics if no valid PDA exists for the given seeds.
    pub fn find_pda(user: &Address, program_id: &Address) -> (::pina::Address, u8) {
        Self::try_find_pda(user, program_id)
            .unwrap_or_else(|| panic!("could not find program address from seeds"))
    }
}
impl<'a> VaultStateSeeds<'a> {
    /// The seeds as byte slices, without the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 2usize] {
        [b"vault", self.user.as_ref()]
    }
    /// Append the bump seed to the seeds.
    pub fn with_bump(&self, bump: u8) -> VaultStateSeedsWithBump<'a> {
        VaultStateSeedsWithBump {
            inner: *self,
            _bump: [bump],
        }
    }
}
impl<'a> VaultStateSeedsWithBump<'a> {
    /// The seeds as byte slices, including the bump seed.
    pub fn as_slices(&self) -> [&[u8]; 3usize] {
        [b"vault", self.inner.user.as_ref(), &self._bump]
    }
    /// The seeds as Pinocchio CPI seed values, including the bump seed.
    pub fn as_seed_array(&self) -> [::pina::Seed<'_>; 3usize] {
        self.as_slices().map(::pina::Seed::from)
    }
    /// The seeds as an owned PDA signer helper.
    pub fn to_signer(&self) -> ::pina::PdaSigner<'_, 3usize> {
        ::pina::PdaSigner::from_seed_array(self.as_seed_array())
    }
}
